[flake8]
exclude = build,dist,.git
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
forced_separate = steps
include_trailing_comma = true
known_first_party = steps
known_third_party = django
multi_line_output = 5

[metadata]
license-file = LICENSE

[wheel]
universal = 1
